playing around with hover effects

--- a/levelzero.html
+++ b/levelzero.html
@@ -14,6 +14,37 @@
     <title>Min sida</title>
 </head>
 <body>
-    <a href="index.html">Tillbaka</a>
+    <a href="index.html">Tillbaka</a></br></br>
+    <div class="giggleContainer">
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+    </div><div class="giggleContainer">
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+    </div><div class="giggleContainer">
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+    </div><div class="giggleContainer">
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+    </div><div class="giggleContainer">
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+    </div><div class="giggleContainer">
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+    </div><div class="giggleContainer">
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+    </div><div class="giggleContainer">
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+    </div><div class="giggleContainer">
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+    </div><div class="giggleContainer">
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+    </div>
 </body>
 </html>
