made a traffic-light

--- a/levelzero.html
+++ b/levelzero.html
@@ -46,6 +46,12 @@
         <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
         <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
     </div>
+    
+    <div id="trafficLight">
+        <div id="firstLight"></div>
+        <div id="secondLight"></div>
+        <div id="thirdLight"></div>
+    </div>
 
 </body>
 </html>
