giggling bubbles are done

--- a/levelzero.html
+++ b/levelzero.html
@@ -15,37 +15,6 @@
 </head>
 <body>
     <a href="index.html">Tillbaka</a></br></br>
-    <div class="giggleContainer">
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-    </div><div class="giggleContainer">
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-    </div><div class="giggleContainer">
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-    </div><div class="giggleContainer">
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-    </div><div class="giggleContainer">
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-    </div><div class="giggleContainer">
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-    </div><div class="giggleContainer">
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-    </div><div class="giggleContainer">
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-    </div><div class="giggleContainer">
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-    </div><div class="giggleContainer">
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
-    </div>
     
     <div id="trafficLight">
         <div id="firstLight"></div>
@@ -53,5 +22,88 @@
         <div id="thirdLight"></div>
     </div>
 
+    <div id="giggleContainer">
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+        <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
+    </div>
+    
 </body>
 </html>
