--- a/levelzero.html
+++ b/levelzero.html
@@ -22,6 +22,7 @@
         <div id="thirdLight"></div>
     </div>
 
+    <!--    Just a shitload of divs    -->
     <div id="giggleContainer">
         <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
         <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div> <div class="giggle"></div>
