Better link name

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 <body>
     <a href="folderone/levelone.html">En mapp ner</a>
     <a href="folderone/foldertwo/leveltwo.html">Två mappar ner</a>
-    <a href="levelzero.html">Samma mapp</a>
+    <a href="levelzero.html">Giggle bubbles & Trafikljus</a>
 </body>
 </html>
