--- a/levelzero.html
+++ b/levelzero.html
@@ -14,7 +14,7 @@
     <title>Min sida</title>
 </head>
 <body>
-    <a href="index.html">Tillbaka</a></br></br>
+    <a href="index.html">Tillbaka</a>
     
     <div id="trafficLight">
         <div id="firstLight"></div>
