--- a/adalovelace.html
+++ b/adalovelace.html
@@ -18,35 +18,38 @@
         <h1>Augusta <span>Ada</span> King, grevinna av <span>Lovelace</span></h1> 
     </header>
     <aside>
+        <img src="adalovelaceimg/417px-Ada_Lovelace_portrait.jpg">
         <nav>
-            <a href="adalovelacegallery.html">bilder</a>
-            <a href="adalovelacegallery.html">bilder</a>
-            <a href="adalovelacegallery.html">bilder</a>
+            <ul>
+                <li><a href="adalovelacegallery.html">Bildgalleri</a></li>
+                <li><a href="https://sv.wikipedia.org/wiki/Ada_Lovelace">Läs mer på Wikipedia</a></li>
+            </ul>
         </nav>
     </aside>
     <main>
-        <h2>Ada Lovelace</h2>
-        <h3>Vem var Ada Lovelace?</h3>
+        <h2>Vem var Ada Lovelace?</h2>
         <p>
             Augusta Ada Byron föddes i december 1815 i London. Hennes föräldrar var Anne Isabella Byron och George Gordon Byron men mest känd som Lord Byron. Anne Isabella (kallades Annabella) var en duktig matematiker och var redan som barn begåvad. Hennes föräldrar anställde en pensionerad professor från Cambridge Universitet och hon fick en utbildning inom klassisk litteratur, filosofi, naturvetenskap och matematik. Lord Byron var vid Adas födelse en av Englands mest kända poeter och en angängare romantiken. Han var en notorisk kvinnotjusare, ständigt i skuld och hade ett rykte som "mad, bad and dangerous to know".
         </p><p>
             Giftemålet mellan Annabella och Byron kan tyckas underligt då de var väldigt olika men de gifte sig i början 1815. Äkteskapet höll inte länge utan en månad efter Adas födelse så separerade de och Byron stack till Frankrike och skulle aldrig träffa sin dotter igen.
         </p>
-        <h3>Uppväxt</h3>
+        <h2>Uppväxt</h2>
         <p>
             Orolig för att Ada skulle få några av hennes fars mer rebelliska drag eller intresse för poesi fick Ada en strikt uppväxt som liknande hennes mammas i bl.a. matematik och logik. I ett utdrag från hennes guvernants dagbok kan vi läsa följande om hennes schema.
         </p>
         <blockquote>
-            "lessons in the morning in arithmetic, grammar, spelling, reading, music, each no more than a quarter of an hour long - after dinner, geography, drawing, French, music, reading, all performed with alacrity and docility." (Hollings C, Martin U, Rice A, s.9)
+            "lessons in the morning in arithmetic, grammar, spelling, reading, music, each no more than a quarter of an hour long - after dinner, geography, drawing, French, music, reading, all performed with alacrity and docility."
         </blockquote>
+        <address>(Hollings C, Martin U, Rice A, s.9)</address>
         <p>
             Vid 13 års ålder hade hon bl.a. William Frend som lärare (som hade varit hennes mammas privatlärare) och via honom lärde hon känna Mary Somerville som var matematiker och populär författare. Genom Mary fick Ada en ingång till Londons vetenskapliga och litterära societet och 1833 träffade hon på Charles Babbage. 1835 gifte hon sig med William King en något äldre herre som delade och uppmuntrade Adas intresse för matematik. 1838 blev King "Earl of Lovelace" och Ada blev då "Countess of Lovelace" och därefter Ada Lovelace. De flyttade ut en bit utanför London och fick tre barn. I ett brev till Mary Somerville kan vi läsa följande om Adas dedikation till matematiken.
         </p>
-        <p>
-            "I now read Mathematics every day & am occupied in Trigonometry & in preliminaries to Cubic & Biquadratic Equations. So you see that matrimony has by no means lessened my taste for those pursuits, nor my determination to carry them on..." (Hollings C, Martin U, Rice A, s.32)
-        </p>
+        <blockquote>
+            "I now read Mathematics every day & am occupied in Trigonometry & in preliminaries to Cubic & Biquadratic Equations. So you see that matrimony has by no means lessened my taste for those pursuits, nor my determination to carry them on..." 
+        </blockquote>
+        <address>(Hollings C, Martin U, Rice A, s.32)</address>
 
-        <h3>Charles Babbage</h3>
+        <h2>Charles Babbage</h2>
         <p>
             Charles Babbage började arbeta på sin "The Analytical Engine" i mitten 1830-talet och han och Ada Lovelace blev goda vänner och hon fungerade som ett bollplank och fascinerades av denna maskin och dess möjligheter.
         </p><p>
@@ -55,8 +58,10 @@
             Till skillnad från Babbage såg Ada möjligheten att "The Analytical Engine" skulle kunna vara mer än bara en maskin som gör matematiska beräkningar. Utan den skulle rent teoretiskt kunna skapa musik eller konst. Såhär skriver hon i "Note G".
         </p>
         <blockquote>
-            "Supposing that the fundamental relations of pitched sounds in the science of harmony and of musical composition were susceptible of such expression and adaptations, the engine might compose eloborate and scientific pieces of music of any degree of complexity or extent." (Hollings C, Martin U, Rice A, s.82)
+            "Supposing that the fundamental relations of pitched sounds in the science of harmony and of musical composition were susceptible of such expression and adaptations, the engine might compose eloborate and scientific pieces of music of any degree of complexity or extent."
         </blockquote>
+        <address>(Hollings C, Martin U, Rice A, s.82)</address>
+
         <p>
             Tyvärr blev aldrig Babbage "The Analytical Engine" byggd då han inte fick några pengar för att bygga den.
         </p><p>
