finishing touches. Added gallery

--- a/adalovelace.html
+++ b/adalovelace.html
@@ -8,6 +8,9 @@
     <meta name="description" content="A short description">
     <meta name="author" content="MonBjo">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Miss+Fajardose&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script.js"></script>
 
@@ -15,10 +18,11 @@
 </head>
 <body>
     <header>
-        <h1>Augusta <span>Ada</span> King, grevinna av <span>Lovelace</span></h1> 
+        <h1>Augusta Ada King, grevinna av Lovelace</h1> 
     </header>
     <aside>
         <img src="adalovelaceimg/417px-Ada_Lovelace_portrait.jpg">
+        <h2>Ada Lovelace</h2>
         <nav>
             <ul>
                 <li><a href="adalovelacegallery.html">Bildgalleri</a></li>
