--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
     <title>Min sida</title>
 </head>
 <body>
-    <a href="folderone/levelone.html">En mapp ner</a>
-    <a href="folderone/foldertwo/leveltwo.html">Två mappar ner</a>
-    <a href="levelzero.html">Giggle bubbles & Trafikljus</a>
-    <a href="adalovelace.html">Ada Lovelace</a>
+    hellu
 </body>
 </html>
