--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <title>Min sida</title>
 </head>
 <body>
-    hellu
+    <header class="sticky">
+        <p>Min sida</p>
+        <nav>
+            <a href="#">Hem</a>
+            <a href="#">Om mig</a>
+            <a href="#">Kontakt</a>
+        </nav>
+    </header>
+    <img src="https://images.unsplash.com/photo-1600094329163-a2b52f913831?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1">
 </body>
 </html>
