created main layout

--- a/poster_shop/index.html
+++ b/poster_shop/index.html
@@ -11,17 +11,23 @@
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script.js"></script>
 
-    <title>Min sida</title>
+    <title>Poster Shop</title>
 </head>
 <body>
-    <header class="sticky">
-        <p>Min sida</p>
-        <nav>
-            <a href="#">Hem</a>
-            <a href="#">Om mig</a>
-            <a href="#">Kontakt</a>
-        </nav>
+    <header>
+        <h1>Poster Shop</h1>
+        <img src="img\yQVp4km.png"></header>
     </header>
-    <img src="https://images.unsplash.com/photo-1600094329163-a2b52f913831?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1">
+    <main>
+        <section class="smallCards">
+
+        </section>
+        <section class="bigCards">
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
