Header, pretty much done

--- a/poster_shop/index.html
+++ b/poster_shop/index.html
@@ -16,14 +16,14 @@
 <body>
     <header>
         <h1>Poster Shop</h1>
-        <img src="img\yQVp4km.png"></header>
+        <img src="img\yQVp4km.png">
     </header>
     <main>
         <section class="smallCards">
-
+eeee
         </section>
         <section class="bigCards">
-
+rrr
         </section>
     </main>
     <footer>
