layout for small cards made

--- a/poster_shop/index.html
+++ b/poster_shop/index.html
@@ -19,10 +19,66 @@
         <img src="img\yQVp4km.png">
     </header>
     <main>
-        <section class="smallCards">
-eeee
+        <section class="smallCardContainer">
+
+            <section class="smallCard">
+                <img src="img/8oDzawD.png">
+                <h1>Austronat</h1>
+                <p>I don't care what town you're born in, what city, what country. If you're a child, you are curious about your environment.</p>
+                <button>Oh, take my money!</button>
+            </section>
+            <section class="smallCard">
+                <img src="img/8oDzawD.png">
+                <h1>Austronat</h1>
+                <p>You're overturning rocks. You're plucking leaves off of trees and petals off of flowers, looking inside, and you're doing things that create disorder in the lives of the adults around you.</p>
+                <button>Oh, take my money!</button>
+            </section>
+            <section class="smallCard">
+                <img src="img/8oDzawD.png">
+                <h1>Austronat</h1>
+                <p>My parents didn't know much science; in fact, they didn't know science at all.But they could recognize a science book when they saw it,</p>
+                <button>Oh, take my money!</button>
+            </section>
+            
+            <section class="smallCard">
+                <img src="img/8oDzawD.png">
+                <h1>Austronat</h1>
+                <p>and they spent a lot of time at bookstores, combing the remainder tables for science books to buy for me. </p>
+                <button>Oh, take my money!</button>
+            </section>
+            <section class="smallCard">
+                <img src="img/8oDzawD.png">
+                <h1>Austronat</h1>
+                <p>As a citizen, as a public scientist, I can tell you that Einstein essentially overturned a so strongly established paradigm of science.</p>
+                <button>Oh, take my money!</button>
+            </section>
+            <section class="smallCard">
+                <img src="img/8oDzawD.png">
+                <h1>Austronat</h1>
+                <p>There is always a place I can take someone's curiosity and land where they end up enlightened when we're done. That's my challenge as an educator. </p>
+                <button>Oh, take my money!</button>
+            </section>
+            
+            <section class="smallCard">
+                <img src="img/8oDzawD.png">
+                <h1>Austronat</h1>
+                <p>No one is dumb who is curious. The people who don't ask questions remain clueless throughout their lives. </p>
+                <button>Oh, take my money!</button>
+            </section>
+            <section class="smallCard">
+                <img src="img/8oDzawD.png">
+                <h1>Austronat</h1>
+                <p>You can't have people making decisions about the future of the world who are scientifically illiterate. That's a recipe for disaster. </p>
+                <button>Oh, take my money!</button>
+            </section>
+            <section class="smallCard">
+                <img src="img/8oDzawD.png">
+                <h1>Austronat</h1>
+                <p>And I don't mean just whether a politician is scientifically literate, but people who vote politicians into office.</p>
+                <button>Oh, take my money!</button>
+            </section>
         </section>
-        <section class="bigCards">
+        <section class="bigCardContainer">
 rrr
         </section>
     </main>
