That's close enough

--- a/poster_shop/index.html
+++ b/poster_shop/index.html
@@ -16,74 +16,102 @@
 <body>
     <header>
         <h1>Poster Shop</h1>
-        <img src="img\yQVp4km.png">
+        <img src="img\head_er.png">
     </header>
     <main>
         <section class="smallCardContainer">
 
             <section class="smallCard">
-                <img src="img/8oDzawD.png">
+                <img src="img/austronaut.png">
                 <h1>Austronat</h1>
                 <p>I don't care what town you're born in, what city, what country. If you're a child, you are curious about your environment.</p>
                 <button>Oh, take my money!</button>
             </section>
             <section class="smallCard">
-                <img src="img/8oDzawD.png">
-                <h1>Austronat</h1>
+                <img src="img/ninja.png">
+                <h1>Ninja</h1>
                 <p>You're overturning rocks. You're plucking leaves off of trees and petals off of flowers, looking inside, and you're doing things that create disorder in the lives of the adults around you.</p>
                 <button>Oh, take my money!</button>
             </section>
             <section class="smallCard">
-                <img src="img/8oDzawD.png">
-                <h1>Austronat</h1>
+                <img src="img/nerd.png">
+                <h1>Nerd</h1>
                 <p>My parents didn't know much science; in fact, they didn't know science at all.But they could recognize a science book when they saw it,</p>
                 <button>Oh, take my money!</button>
             </section>
             
             <section class="smallCard">
-                <img src="img/8oDzawD.png">
-                <h1>Austronat</h1>
+                <img src="img/läkare.png">
+                <h1>Läkare</h1>
                 <p>and they spent a lot of time at bookstores, combing the remainder tables for science books to buy for me. </p>
                 <button>Oh, take my money!</button>
             </section>
             <section class="smallCard">
-                <img src="img/8oDzawD.png">
-                <h1>Austronat</h1>
+                <img src="img/gitarrknäppare.png">
+                <h1>Gitarrknäppare</h1>
                 <p>As a citizen, as a public scientist, I can tell you that Einstein essentially overturned a so strongly established paradigm of science.</p>
                 <button>Oh, take my money!</button>
             </section>
             <section class="smallCard">
-                <img src="img/8oDzawD.png">
-                <h1>Austronat</h1>
+                <img src="img/snorklare.png">
+                <h1>Snorklare</h1>
                 <p>There is always a place I can take someone's curiosity and land where they end up enlightened when we're done. That's my challenge as an educator. </p>
                 <button>Oh, take my money!</button>
             </section>
             
             <section class="smallCard">
-                <img src="img/8oDzawD.png">
-                <h1>Austronat</h1>
+                <img src="img/clown.png">
+                <h1>Clown</h1>
                 <p>No one is dumb who is curious. The people who don't ask questions remain clueless throughout their lives. </p>
                 <button>Oh, take my money!</button>
             </section>
             <section class="smallCard">
-                <img src="img/8oDzawD.png">
-                <h1>Austronat</h1>
+                <img src="img/polis.png">
+                <h1>Polis</h1>
                 <p>You can't have people making decisions about the future of the world who are scientifically illiterate. That's a recipe for disaster. </p>
                 <button>Oh, take my money!</button>
             </section>
             <section class="smallCard">
-                <img src="img/8oDzawD.png">
-                <h1>Austronat</h1>
+                <img src="img/Fe.png">
+                <h1>Fe</h1>
                 <p>And I don't mean just whether a politician is scientifically literate, but people who vote politicians into office.</p>
                 <button>Oh, take my money!</button>
             </section>
         </section>
         <section class="bigCardContainer">
-rrr
+            <section class="bigCard">
+                <img src="img/fotograf.png">
+                <h1>Fotograf</h1>
+                <p>You can't have people making decisions about the future of the world who are scientifically illiterate. That's a recipe for disaster. </p>
+                <button>Oh, take my money!</button>
+            </section>
+            <section class="bigCard">
+                <img src="img/personlig_tränare.png">
+                <h1>Personlig tränare</h1>
+                <p>And I don't mean just whether a politician is scientifically literate, but people who vote politicians into office.</p>
+                <button>Oh, take my money!</button>
+            </section>
         </section>
     </main>
     <footer>
-
+        <section class="footerContainer">
+            <nav>
+                <h1>Nav</h1>
+                <ul>
+                    <li>Products</li>
+                    <li>About Us</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+            <address>
+                <h1>Adress</h1>
+                <p> Plinkeplonkvägen 32 888 81 Klonkberga</p>
+            </address>
+            <nav>
+                <h1>Social media</h1>
+                <p>🐦 &nbsp; 🔵 &nbsp; 🟦 &nbsp; 📷</p>
+            </nav>
+        </section>
     </footer>
 </body>
 </html>
