moved the zocom logo

--- a/Flexbox_Bootcamp/index.html
+++ b/Flexbox_Bootcamp/index.html
@@ -19,8 +19,8 @@
             <li><a href="menueasy.html"> Menu Easy </a></li>
             <li><a href="menumedium.html"> Menu Medium </a></li>
             <li><a href="menuhard.html"> Menu Hard </a></li>
-            <li><a href="FlexboxFibonacci.html"> Flexbox Fibonacci </a></li>
-            <li><a href=""> ree </a></li>
+            <li><a href="flexboxFibonacci.html"> Flexbox Fibonacci </a></li>
+            <li><a href="cardWithPager"> Kort med pager </a></li>
             <li><a href=""> ree </a></li>
         </ul>
     </nav>
