--- a/Flexbox_Bootcamp/menumedium.html
+++ b/Flexbox_Bootcamp/menumedium.html
@@ -17,7 +17,7 @@
     
     <header>
         <nav class="menumedium">
-            <img src="zocom-logo.svg">
+            <img src="../img/zocom-logo.svg">
             <ul>
                 <li>Option 1</li>
                 <li>Option 2</li>
