reorganized & updated readme

--- a/Flexbox/Flexbox_Bootcamp/menuhard.html
+++ b/Flexbox/Flexbox_Bootcamp/menuhard.html
@@ -16,7 +16,7 @@
     <a href="index.html"> Tillbaka</a>
     
     <header class="menuhard">
-        <img src="../img/zocom-logo.svg">
+        <img src="../../img/zocom-logo.svg">
         <nav>
             <ul>
                 <li>Option 1</li>
