--- a/Flexbox/everythingIsDesign/index.html
+++ b/Flexbox/everythingIsDesign/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img src="../../img/zocom-logo.svg">
+        <img src="../../../img/zocom-logo.svg">
         <nav class="menu">
             <ul>
                 <li>Home</li>
@@ -39,7 +39,7 @@
                     <div></div>
                     <div></div>
                 </nav>
-                <div><img src="../../img/placeholder_img.svg"></div>
+                <div><img src="../../../img/placeholder_img.svg"></div>
                 <h2>card title</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo blanditiis neque tempora corrupti suscipit quisquam aliquam, adipisci dolore maiores. Hic, fugiat dolorem dolorum ex distinctio aspernatur quis suscipit error quod?
@@ -51,7 +51,7 @@
                     <div></div>
                     <div></div>
                 </nav>
-                <div><img src="../../img/placeholder_img.svg"></div>
+                <div><img src="../../../img/placeholder_img.svg"></div>
                 <h2>card title</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo blanditiis neque tempora corrupti suscipit quisquam aliquam, adipisci dolore maiores. Hic, fugiat dolorem dolorum ex distinctio aspernatur quis suscipit error quod?
@@ -62,13 +62,13 @@
                     <div></div>
                     <div></div>
                 </nav>
-                <div><img src="../../img/placeholder_img.svg"></div>
+                <div><img src="../../../img/placeholder_img.svg"></div>
                 <h2>card title</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo blanditiis neque tempora corrupti suscipit quisquam aliquam, adipisci dolore maiores. Hic, fugiat dolorem dolorum ex distinctio aspernatur quis suscipit error quod?
                 </p>
             </article><article>
-                <div><img src="../../img/placeholder_img.svg"></div>
+                <div><img src="../../../img/placeholder_img.svg"></div>
                 <h2>card title</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo blanditiis neque tempora corrupti suscipit quisquam aliquam, adipisci dolore maiores. Hic, fugiat dolorem dolorum ex distinctio aspernatur quis suscipit error quod?
@@ -79,7 +79,7 @@
                     <div></div>
                     <div></div>
                 </nav>
-                <div><img src="../../img/placeholder_img.svg"></div>
+                <div><img src="../../../img/placeholder_img.svg"></div>
                 <h2>card title</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo blanditiis neque tempora corrupti suscipit quisquam aliquam, adipisci dolore maiores. Hic, fugiat dolorem dolorum ex distinctio aspernatur quis suscipit error quod?
