--- a/Responsive/responsive_bootcamp/two/index.html
+++ b/Responsive/responsive_bootcamp/two/index.html
@@ -15,7 +15,21 @@
 </head>
 <body>
     <div class="wrapper">
+        <header>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+        </header>
+
+        <main>
+            <section></section>
+            <section></section>
+            <section></section>
+        </main>
         
+        <footer>
+        </footer>
     </div>
 </body>
 </html>
