--- a/Responsive/responsive_bootcamp/three/index.html
+++ b/Responsive/responsive_bootcamp/three/index.html
@@ -15,6 +15,30 @@
 </head>
 <body>
     <div class="wrapper">
+        <figure></figure>
+
+        <header>
+            <section></section>
+            <section></section>
+            <section></section>
+        </header>
+
+        <main>
+            <section>
+                <article></article>
+                <article></article>
+                <article></article>
+                <article></article>
+            </section>
+            
+            <aside>
+                <section></section>
+                <section></section>
+                <section></section>
+            </aside>
+        </main>
+
+        <footer></footer>
     </div>
 </body>
 </html>
