Forgot to add the . before classname :expressionless:

--- a/Responsive/responsive_bootcamp/four/index.html
+++ b/Responsive/responsive_bootcamp/four/index.html
@@ -15,7 +15,18 @@
 </head>
 <body>
     <div class="wrapper">
-        
+        <figure></figure>
+
+        <main>
+            <article class="purple purpleone"></article>
+            <article class="purple purpletwo"></article>
+            <article class="pink pinkone"></article>
+            <article class="pink pinktwo"></article>
+        </main>
+
+        <button></button>
+
+        <footer></footer>
     </div>
 </body>
 </html>
