--- a/Forms/form/index.html
+++ b/Forms/form/index.html
@@ -16,12 +16,30 @@
 <body>
     <main>
         <header>
-            <h1> Välkommen! </h1>
+            <h1>Välkommen!</h1>
         </header>
 
+        <h2>Registrera dig för ett konto</h2>
+
         <form>
-            <h2></h2>
+            <section>
+                <lable for="name">NAME</lable>
+                <input type="text" id="name">
+            </section>
+
+            <section>
+                <lable for="email">EMAIL</lable>
+                <input type="email" id="email">
+            </section>
+
+            <section>
+                <lable for="password">PASSWORD</lable>
+                <input type="password" id="password">
+            </section>
+
+            <button>Sign me up!</button>
         </form>
+
     </main>
 </body>
 </html>
