--- a/Animation/transitions/Slide_in_menu/index.html
+++ b/Animation/transitions/Slide_in_menu/index.html
@@ -9,16 +9,46 @@
     <meta name="author" content="MonBjo">
 
     <link rel="stylesheet" href="style.css">
+
+    <title>Min sida</title>
+</head>
+<body>
+
+    <button class="toggle"></button>
+    <nav class="open">
+        <ul>
+            <li>
+                <span>01</span> 
+                <a href="#">Home</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laboriosam iure fuga veniam pariatur officia error eum mollitia sequi</p>
+            </li>
+            
+            <li>
+                <span>02</span> 
+                <a href="#">What we do</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laboriosam iure fuga</p>
+            </li>
+            
+            <li>
+                <span>03</span> 
+                <a href="#">Who we are</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laboriosam iure fuga veniam pariatur</p>
+            </li>
+
+            <li>
+                <span>04</span> 
+                <a href="#">Contact</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laboriosam iure fuga veniam pariatur officia error eum mollitia sequi, nihil tempore voluptatibus optio debitis beatae, esse corporis deleniti eos animi!</p>
+            </li>
+        </ul>
+    </nav>
+
+
     <script>
         document.querySelector('.toggle')
             .addEventListener('click', (e) => {
                 document.querySelector('nav').classList.toggle('open')
             })
     </script>
-
-    <title>Min sida</title>
-</head>
-<body>
- <!-- Ni ska alltså ha en knapp med en klass som heter .toggle som kommer att trigga er meny och lägga till en klass som heter .open på er nav-tagg -->
 </body>
 </html>
