--- a/Animation/transitions/Pride_cards/index.html
+++ b/Animation/transitions/Pride_cards/index.html
@@ -14,6 +14,16 @@
     <title>Min sida</title>
 </head>
 <body>
- 
+    <div>
+        <div>
+            <div>
+                <div>
+                    <div>
+                        <div> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
