--- a/Animation/Keyframes/stopwatch/index.html
+++ b/Animation/Keyframes/stopwatch/index.html
@@ -14,6 +14,13 @@
     <title>Min sida</title>
 </head>
 <body>
- 
+    <main>
+        <div class="dot"></div>
+        <div>
+            <div> 
+                <div> </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
