stone paper scissor anyone?

--- a/Funktioner/index.html
+++ b/Funktioner/index.html
@@ -11,7 +11,13 @@
     <title>Min sida</title>
 </head>
 <body>
-    
+    <section>
+        <h2>sten sax påse</h2>
+
+        <button id="stone">sten</button>
+        <button id="scissor">sax</button>
+        <button id="paper">påse</button>
+    </section>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
